--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
-    "pug": "^2.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "typescript": "^3.8.3",
     "utility-types": "^3.10.0",
     "xml2js": "^0.4.23"
@@ -22,6 +23,8 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/pug": "^2.0.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "@types/xml2js": "^0.4.5",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.1",
